--- a/PROYECTO_1P/ver_perfil.html
+++ b/PROYECTO_1P/ver_perfil.html
@@ -389,6 +389,62 @@ body.dark-theme .perfil-detalles {
       <h5 class="text-info fw-bold mb-3">👥 También están en <span id="nombreDepto"></span></h5>
       <ul id="listaDepto" class="list-group list-group-flush"></ul>
     </div>
+
+
+    <div class="container mt-5">
+  <h4 class="text-success fw-bold mb-3 text-center">🎵 Estas canciones te pueden gustar <i class="bi bi-spotify ms-2"></i></h4>
+  <div id="carruselCanciones" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- Cada canción como carousel-item -->
+      <!-- Generado automáticamente -->
+
+      <!-- Aquí puedes añadir más canciones repitiendo este bloque con sus datos correctos -->
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carruselCanciones" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bg-dark rounded-circle"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carruselCanciones" data-bs-slide="next">
+      <span class="carousel-control-next-icon bg-dark rounded-circle"></span>
+    </button>
+  </div>
+</div>
+
+<script>
+  const canciones = [
+    { nombre: "Quavo - Duki", url: "https://open.spotify.com/embed/track/262lBp5MtK39jc7gQdYrVM" },
+    { nombre: "Mi Refe - Beéle", url: "https://open.spotify.com/embed/track/7ricDBUakN3N0YkkKE8Obu" },
+    { nombre: "Soltera - Blessd", url: "https://open.spotify.com/embed/track/13BDiikG6y5o5cQTK0HpW6" },
+    { nombre: "Ramen para dos - Maria Becerra", url: "https://open.spotify.com/embed/track/0vcuJjViqrFCCWUrjrZW1X" },
+    { nombre: "Gazz Probo - Tury Kris R", url: "https://open.spotify.com/embed/track/7K7PES4hr8tgM0FfNLEzeR" },
+    { nombre: "Vida de Rock - Duki & Milo J", url: "https://open.spotify.com/embed/track/26y2gBrbiFJIOUjIlSQfdH" },
+    { nombre: "Qué vas a hacer hoy - Milo J", url: "https://open.spotify.com/embed/track/0Sr7ssScx54yxdM2ols7nW" },
+    { nombre: "Una Bala - Milo J", url: "https://open.spotify.com/embed/track/6Rz80wUWSUbGGVHvkH7NpU" },
+    { nombre: "Bésame - Seven Kayne", url: "https://open.spotify.com/embed/track/3GD6eImRvT0zgr8cQnokUq" },
+    { nombre: "Paraíso (Daña) - Milo J", url: "https://open.spotify.com/embed/track/03PN2qMfzrk48jzUEXHZAh" },
+    { nombre: "Blinding Lights - The Weeknd", url: "https://open.spotify.com/embed/track/0VjIjW4GlUZAMYd2vXMi3b" },
+    { nombre: "Flowers - Miley Cyrus", url: "https://open.spotify.com/embed/track/4DHcnVTT87F0zZhRPYmZ3B" },
+    { nombre: "Thunder - Imagine Dragons", url: "https://open.spotify.com/embed/track/1zB4vmk8tFRmM9UULNzbLB" },
+    { nombre: "Shivers - Ed Sheeran", url: "https://open.spotify.com/embed/track/50nfwKoDiSYg8zOCREWAm5" },
+    { nombre: "As It Was - Harry Styles", url: "https://open.spotify.com/embed/track/4LRPiXqCikLlN15c3yImP7" },
+    { nombre: "STAY - The Kid LAROI, Justin Bieber", url: "https://open.spotify.com/embed/track/5PjdY0CKGZdEuoNab3yDmX" },
+    { nombre: "Aceite de Coco - Blessd", url: "https://open.spotify.com/embed/track/0hzO3OqNIPCwRKxvwBdtjS" },
+    { nombre: "Sisas Nada - Tury", url: "https://open.spotify.com/embed/track/7jkNUCqYvmgWe8JxhE6C98" }
+  ];
+
+  const inner = document.querySelector(".carousel-inner");
+  canciones.forEach((cancion, i) => {
+    const item = document.createElement("div");
+    item.className = "carousel-item text-center" + (i === 0 ? " active" : "");
+    item.innerHTML = `
+      <iframe style="border-radius:12px" src="${cancion.url}?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <p class="mt-2 fw-semibold">${cancion.nombre}</p>
+    `;
+    inner.appendChild(item);
+  });
+</script>
+
   </div>
 </div>
 
